--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,17 +1,55 @@
 /* Main css file */ 
 * {
-	padding: 0px;
-	margin: 0px;
-	background: rgb(20,20,20);
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+} 
+
+/* SCROOL BAR */
+::-webkit-scrollbar {
+	width: 10px;
+} 
+
+::-webkit-scrollbar-track {
+	background: rgb(26, 26, 26);
+}
+ 
+::-webkit-scrollbar-thumb {
+	background: #40444b;
+	-webkit-transition: all 0.2s ease;
+	transition: all 0.2s ease;
+} 
+
+::-webkit-scrollbar-thumb:hover {
+	background: #5c646b;
 }
 
-.title {
-	color: lightgrey;
-	font-size: 40px;
+/* COMMONS */
+body {
+    background: #292e33;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0 auto;
+	height: 100vh;
+}
+
+.container {
 	position: absolute;
-	top: 45%;
-	left: 50%;
-	transform:translate(-50%, -50%);
-	font-family: 'Maven Pro', sans-serif;
-	user-select: none;opacity: 0.8;
+	border: 0.1px solid #5c646b;
+	height: 100%;
+	width: 100%;
+}
+
+/* LARGE DESKTOPS CSS */
+@media only screen and (min-width: 2048px) {
+	.container {
+		width: 80%;
+	}
+}
+
+/* PHONE CSS */
+@media only screen and (max-width: 768px) {
+
 }
