--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -29,9 +29,7 @@
 body {
     background: #292e33;
 	display: flex;
-	align-items: center;
 	justify-content: center;
-	margin: 0 auto;
 	height: 100vh;
 }
 
@@ -40,6 +38,47 @@ body {
 	border: 0.1px solid #5c646b;
 	height: 100%;
 	width: 100%;
+}
+
+.left {
+	position: absolute;
+	left: 0px;
+}
+
+.right {
+	position: absolute;
+	right: 0px;
+}
+
+/* USER BAR */
+.user-bar {
+	padding-top: 4px;
+	padding-bottom: 4px;
+	border-bottom: 1px solid #5c646b;
+	height: 30px;
+	background-color: rgb(53, 56, 59);
+}
+
+.welcome-header {
+	font-size: 18px;	
+	color: white;	
+}
+
+.user-bar-link {
+	font-size: 18px;
+	background-color: rgb(41, 41, 41);
+	border: 1px solid rgb(150, 150, 150);
+	color: white;
+	text-decoration: none;
+	padding: 4px;
+	margin-left: -0px;
+	padding-left: 5px;
+	padding-right: 6px;
+}
+
+.user-bar-link:hover {
+	background-color: rgb(20, 20, 20);
+	color: rgb(255, 255, 255);
 }
 
 /* LARGE DESKTOPS CSS */
@@ -51,5 +90,14 @@ body {
 
 /* PHONE CSS */
 @media only screen and (max-width: 768px) {
-
+	.user-bar {
+		padding-top: 1px;
+		height: 24px;
+	}
+	.welcome-header {
+		font-size: 12px;
+	}
+	.user-bar-link {
+		font-size: 12px;
+	}
 }
