--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6,8 +6,9 @@
     font-family: Arial, Helvetica, sans-serif;
 } 
 
+
 /* SCROOL BAR */
-::-webkit-scrollbar {
+::-webkit-scrollbar { 
 	width: 10px;
 } 
 
@@ -24,6 +25,7 @@
 ::-webkit-scrollbar-thumb:hover {
 	background: #5c646b;
 }
+
 
 /* COMMONS */
 body {
@@ -50,6 +52,40 @@ body {
 	position: absolute;
 	right: 0px;
 }
+
+.display-none {
+	display: none;
+}
+
+.margin-bot-8 {
+	margin-bottom: 8px;
+}
+
+
+/* ALERT STYLE */
+.alert {
+	position: relative;
+	max-width: 20%;
+	text-align: center;
+	border: 1px solid #5c646b;
+	background-color: rgb(53, 56, 59);
+	margin-top: 10px;
+}
+
+.alert-error {
+	background-color: rgb(190, 23, 23);
+}
+
+.alert-success {
+	background-color: rgb(15, 104, 15);
+}
+
+.alert-text {
+	color: white;
+	font-size: 18px;
+	font-weight: bold;
+}
+
 
 /* USER BAR */
 .user-bar {
@@ -82,6 +118,7 @@ body {
 	color: rgb(255, 255, 255);
 }
 
+
 /* NAVIGATION BAR */
 .navigation-bar {
 	padding-top: 5px;
@@ -104,10 +141,34 @@ body {
 	text-decoration: underline;
 }
 
+.nav-link-small {
+	font-size: 18px;
+}
+
+
 /* NAVIGATION SEARCH FORM */
 .nav-search-form {
 	margin-right: 4px;
 }
+
+/* FROM STYLE */
+.form {
+	position: absolute;
+	border: 1px solid #5c646b;
+	background-color: rgb(53, 56, 59);
+	padding: 10px;
+	left: 50%;
+	top: 40%;
+	transform: translate(-50%, -50%);
+}
+
+.form-title {
+	color: white;
+	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
+}
+
 
 /* LARGE DESKTOPS CSS */
 @media only screen and (min-width: 2048px) {
@@ -115,6 +176,7 @@ body {
 		width: 80%;
 	}
 }
+
 
 /* PHONE CSS */
 @media only screen and (max-width: 768px) {
@@ -133,5 +195,12 @@ body {
 	}
 	.navigation-bar {
 		height: 33px;
+	}
+	.alert {
+		margin-top: 0;
+		max-width: 100%;
+	}
+	.alert-text {
+		font-size: 15px;
 	}
 }
