--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -64,6 +64,22 @@ body {
 	margin-top: 8px;
 }
 
+.color-red {
+	color: rgb(245, 85, 85);
+}
+
+.color-green {
+	color: rgb(54, 216, 54);
+}
+
+.color-yellow {
+	color: rgb(240, 240, 72);
+}
+
+.color-blue {
+	color: rgb(81, 81, 241);
+}
+
 
 /* ALERT STYLE */
 .alert {
