--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -246,10 +246,9 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 .forum-board {
 	border: 1px solid #5c646b;
 	background-color: rgb(53, 56, 59);
-}
-
-.forum-category {
-	border-bottom: 1px solid #5c646b;
+	padding: 5px;
+	margin: 5px;
+	border-radius: 5px;
 }
 
 .forum-title {
@@ -258,6 +257,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 	font-weight: bold;
 	border-bottom: 1px solid #5c646b;
 	background-color: rgb(52, 52, 90);
+	margin-bottom: 5px;
 }
 
 .forum-line {
@@ -284,7 +284,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 }
 
 .category-desc {
-	margin-left: 20px;
+	margin-left: 24px;
 	font-size: 16px;
 	color: white;
 	position: relative;
@@ -293,6 +293,8 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 
 .fa-dot-circle {
 	color: white;
+	margin-left: 3px;
+	margin-top: 2px;
 }
 
 
@@ -343,12 +345,15 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 
 /* FORUM READER */
 .post-list {
-	background-color: rgb(53, 56, 59);
+	margin: 5px;
 }
 
 .post-element {
-	border-bottom: 1px solid rgb(253, 253, 104);
-	padding: 4px;
+	background-color: rgb(53, 56, 59);
+	border-bottom: 1px solid rgb(248, 248, 164);
+	margin-top: 5px;
+	padding: 5px;
+	border-radius: 5px;
 }
 
 .post-element:hover {
@@ -372,7 +377,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 }
 
 .post-desc-date {
-	margin-right: 5px;
+	margin-right: 10px;
 	color: #d6d6d6;
 }
 
