--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -253,8 +253,13 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 
 .forum-category {
 	border: 1px solid #818181;
+	background-color: rgb(55, 56, 56);
 	margin: 4px;
 	border-radius: 5px;
+}
+
+.forum-category:hover {
+	background-color: rgb(66, 66, 66);
 }
 
 .forum-title {
