--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -417,6 +417,24 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 	background-color: rgb(51, 53, 54);
 }
 
+
+/* PAGE LIMIT BUTTON */
+.page-button {
+	padding: 3px;
+	border: 1px solid white;
+	text-decoration: none;
+	color: white;
+	margin-left: 3px;
+	margin-right: 3px;
+	margin-top: 3px;
+	margin-bottom: 5px;
+}
+
+.page-button:hover {
+	border: 1px solid rgb(231, 47, 47);
+	color: rgb(231, 47, 47);
+}
+
 /* LARGE DESKTOPS CSS */
 @media only screen and (min-width: 2048px) {
 	.container {
