--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -320,14 +320,22 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 
 
 /* FORUM BROWSE */
+.forum-borowser {
+	margin: 5px;
+	border: 1px solid #818181;
+	border-radius: 5px;
+}
+
 .sub-panel {
 	border-bottom: 1px solid #5c646b;
 	background-color: rgb(53, 56, 59);
 	padding: 2px;
+	border-top-right-radius: 5px;
+	border-top-left-radius: 5px;
 }
 
 .sort-panel {
-	margin-right: 5px;
+	margin-right: 10px;
 }
 
 .sort-text {
