--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -450,21 +450,21 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 .post-reader {
 	background-color: rgb(41, 44, 46);
 	margin: 5px;
-	padding: 5px;
-	border: 1px solid white;
+	padding: 8px;
+	border: 1px solid rgb(179, 179, 179);
 	border-top-right-radius: 5px;
 	border-top-left-radius: 5px;
 }
 
 .post-title {
-	color: rgb(218, 218, 218);
+	color: rgb(233, 233, 233);
 	font-size: 25px;
-	border-bottom: 1px solid white;
+	border-bottom: 1px solid rgb(179, 179, 179);
 	padding-bottom: 1px;
 }
 
 .post-author {
-	border-bottom: 1px solid white;
+	border-bottom: 1px solid rgb(179, 179, 179);
 }
 
 .post-author-avatar {
