[+] comment form only for logged users

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -118,6 +118,7 @@ body {
 	border: 1px solid #5c646b;
 	background-color: rgb(40, 40, 43);
 	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 .alert-error {
