--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -591,6 +591,67 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 }
 
 
+/* PROFILE-BOX */
+.profile-box {
+	margin: 1%;
+}
+
+.profile-data {
+	border: 1px solid rgb(165, 165, 165);
+	width: 19%;
+	position: absolute;
+	min-height: 40%;
+	background-color: rgb(54, 56, 58);
+	border-top-left-radius: 8px;
+}
+
+.profile-photo {
+	text-align: center;
+}
+
+.profile-photo img {
+	width: 150px;
+	margin-top: 20px;
+	border: 1px solid white;
+}
+
+.profile-name {
+	color: white;
+	font-size: 18px;
+}
+
+.profile-role {
+	color: rgb(173, 173, 173);
+	font-size: 16px;
+}
+
+.profile-posts-list {
+	border-top-right-radius: 8px;
+	width: 79%;
+	position: relative;
+	left: 19.3%;
+	min-height: 40%;
+	background-color: rgb(54, 56, 58);
+	border: 1px solid rgb(165, 165, 165);
+	margin-bottom: 10px;
+}
+
+.profile-post-link {
+	border: 1px solid rgb(90, 90, 90);
+	padding: 3px;
+	border-top-right-radius: 8px;
+}
+
+.profile-post-link:hover {
+	background-color: rgb(45, 46, 48);
+}
+
+.profile-post-date {
+	margin-right: 4px;
+	color: rgb(182, 182, 182);
+}
+
+
 /* LARGE DESKTOPS CSS */
 @media only screen and (min-width: 2048px) {
 	.container {
@@ -728,5 +789,14 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 	}
 	.comment-text {
 		font-size: 14px;
+	}
+	.profile-photo img {
+		width: 50px;
+	}
+	.profile-name {
+		font-size: 14px;
+	}
+	.profile-role {
+		font-size: 11px;
 	}
 }
