--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -119,6 +119,7 @@ body {
 	background-color: rgb(40, 40, 43);
 	margin-top: 10px;
 	margin-bottom: 10px;
+	padding: 3px;
 }
 
 .alert-error {
@@ -600,7 +601,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 	border: 1px solid rgb(165, 165, 165);
 	width: 19%;
 	position: absolute;
-	min-height: 40%;
+	min-height: 37%;
 	background-color: rgb(54, 56, 58);
 	border-top-left-radius: 8px;
 }
@@ -630,7 +631,6 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 	width: 80%;
 	position: relative;
 	left: 19.3%;
-	min-height: 40%;
 	background-color: rgb(54, 56, 58);
 	border: 1px solid rgb(165, 165, 165);
 	margin-bottom: 10px;
